Typo in lexeme fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Parser)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Parser main.cpp FileReader.cpp FileReader.h Lexem.cpp Lexem.h)
+add_executable(Parser main.cpp FileReader.cpp FileReader.h Lexeme.cpp Lexeme.h)
